--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
               <div class="recommend">
                 <p class="recommend__count">
-                  Lucy and 3 other friends recommned this hotel.
+                  Lucy and 3 other friends recommend this hotel.
                 </p>
                 <div class="recommend__friends">
                   <img
